Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5027

udf headers are not longer buildable outside of Impala source tree

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.8.0, Impala 2.9.0
    • Impala 2.9.0
    • Backend
    • None

    Description

      Various headers in the udf subdirectory, including udf.h and the test harness should be compilable without C++11 and without the full Impala source checkout. They are used by impala-udf-samples to build and test custom UDFs.

      They're currently broken in a couple of ways:

      • noexcept is in udf.h
      • std::shared_ptr is used in a couple of places
      • runtime-state.h is included in one place
      • The "using underlying_type_t" logic depends on C++11 - I think

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: